// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse() 1`] = `
"
.Component {
  color: red;
}
"
`;

exports[`removeOtherThemes() not modify anything if theme undefined 1`] = `
"<template test=\\"213\\">
  .Component
</template>

<script abc=\\"123\\">
export default {
}
</script>

<style test=\\"true\\">
  .Component {
    color: red;
  }
</style>

<style></style>
"
`;

exports[`removeOtherThemes() should remove all other unmatching themes 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>

<style theme=\\"brand1\\" scoped>
  .headline {
    color: blue;
  }
</style>














"
`;

exports[`removeOtherThemes() should remove unmatching theme 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>

<style theme=\\"brand1\\" scoped>
  .headline {
    color: blue;
  }
</style>






"
`;

exports[`removeStyleBlock() should remove specified (2nd) style block 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>







<style theme=\\"brand2\\">
  .headline {
    color: green;
  }
</style>
"
`;
